Use local version of bootstrap validator.

--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -110,8 +110,7 @@
     
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="//1000hz.github.io/bootstrap-validator/dist/validator.min.js"></script>
-
+<script src="{{ url_for('static', filename='js/validator.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 <script>
 PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/portal-wrapper-html";
