--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -1,11 +1,5 @@
 {% extends "layout.html" %}
-{% block body %}
-    <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background hidden-xs" />
-    <!-- topNav loads here -->
-    <div id="mainNav">
-    </div>
-
-
+{% block main %}
     <div class="container">
         <div class="row">
             <div class="col-sm-6 col-md-4">
@@ -60,28 +54,4 @@
             </div>                        
         </div>        
     </div>
-    
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="{{ url_for('static', filename='js/main.js') }}"></script>
-<script>
-PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/portal-wrapper-html";
-{% if user.username%}
-    PORTAL_NAV_PAGE = PORTAL_NAV_PAGE + '/{{ user.username }}';
-{% endif %}
-PORTAL_HOSTNAME = new URL(PORTAL_NAV_PAGE).hostname;
-
-$(document).ready(function(){
-
-    $('[data-toggle="popover"]').popover();
-
-    equalHeightBoxes("lead-well");
-    $(window).resize(function() {
-        // Fire resize if browser window size changes. Delay by 200ms to avoid
-        // too many firings as user drags browser window
-        clearTimeout(this.id);
-        this.id = setTimeout(equalHeightBoxes("lead-well"), 200);
-    });
-});
-</script>
 {% endblock %}
