--- a/portal/templates/termsofuse.html
+++ b/portal/templates/termsofuse.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block body %}
+{% block main %}
   <p>
   This [AD-HOC DRAFT 6/5/2015] Privacy Policy applies solely to the True NTH USA website and not to third party websites reached through a link in the True NTH USA website.
 
