--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -15,13 +15,46 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/topnav.css') }}">
     <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 </head>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-{% endwith %}
-{% block body %}{% endblock %}
+<body>
+    <img src="{{ url_for('static', filename='img/TrueNthHoldBackground.jpg') }}" class="page-background hidden-xs" />
+
+    <!-- topNav loads here -->
+    <div id="mainNav">
+    </div>
+      
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
+{% block main %}
+{% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/main.js') }}"></script>
+<script>
+PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/portal-wrapper-html";
+PORTAL_HOSTNAME = new URL(PORTAL_NAV_PAGE).hostname;
+
+{% block document_ready %}
+$(document).ready(function(){
+
+    $('[data-toggle="popover"]').popover();
+
+    equalHeightBoxes("lead-well");
+    $(window).resize(function() {
+        // Fire resize if browser window size changes. Delay by 200ms to avoid
+        // too many firings as user drags browser window
+        clearTimeout(this.id);
+        this.id = setTimeout(equalHeightBoxes("lead-well"), 200);
+    });
+});
+{% endblock %}
+</script>
+</body>
+</html>
