--- a/portal/templates/flask_user/login.html
+++ b/portal/templates/flask_user/login.html
@@ -2,7 +2,49 @@
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
-<h1>{%trans%}Sign in{%endtrans%}</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                <div class="well lead-well">
+                    <h3>TrueNTH</h3>
+                    <ul>
+                        <li style="margin-bottom: 0.25em; font-size: 15px">is a revolutionary new program, funded by the Movember Foundation, that will significantly <strong>improve the physical and mental health of men</strong> diagnosed and living with prostate cancer.</li>
+                        <li style="margin-bottom: 0.25em; font-size: 15px">helps men and their families <strong>get their lives back on track</strong> following diagnosis and treatment.</li>
+                        <li style="font-size: 15px">helps you <strong>feel knowledgeable and confident</strong> on your journey.</li>
+                    </ul>
+
+                    <h4 class="sign-in">Sign in with:</h4>
+
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <a href="{{ url_for('auth.login', provider_name='facebook') }}"
+                                class="btn btn-block btn-social btn-facebook">
+                                <i class="fa fa-facebook"></i>
+                                Facebook
+                            </a><br />
+                        </div>
+                        <div class="col-sm-4">
+                            <a href="{{ url_for('auth.login', provider_name='google') }}"
+                                class="btn btn-block btn-social btn-google">
+                                <i class="fa fa-google"></i>
+                                Google
+                            </a><br />
+                        </div>
+                        <div class="col-sm-4">
+                            <button data-placement="top" data-toggle="popover" title="Not Yet Available" data-content="This login method not available in demo." class="btn btn-block btn-social btn-movember demo-disabled">
+                                <img src="{{ url_for('static', filename='img/icon_movember.png') }}" />
+                                Movember
+                            </button><br />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 text-center">
+                            <div class="or-holder"><div class="or-divider">or</div></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+                            <h4>Sign in with TrueNTH:</h4>
 
 <form action="" method="POST" class="form" role="form">
     {{ form.hidden_tag() }}
@@ -62,4 +104,10 @@
     {{ render_submit_field(form.submit, tabindex=180) }}
 </form>
 
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
