Misc UI changes in preparation for new portal workflow.

--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -2,12 +2,23 @@
 
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field %}
-<h1>{%trans%}Forgot Password{%endtrans%}</h1>
 
-<form action="" method="POST" class="form" role="form">
-    {{ form.hidden_tag() }}
-    {{ render_field(form.email, tabindex=10) }}
-    {{ render_submit_field(form.submit, tabindex=90) }}
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <div class="well lead-well">
+
+                <h1>{%trans%}Forgot Password{%endtrans%}</h1>
+
+                <form action="" method="POST" class="form" role="form">
+                    {{ form.hidden_tag() }}
+                    {{ render_field(form.email, tabindex=10) }}
+                    {{ render_submit_field(form.submit, tabindex=90) }}
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
