--- a/portal/templates/invite.html
+++ b/portal/templates/invite.html
@@ -6,7 +6,7 @@
 
                 <div class="well lead-well">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-sm-12 col-md-8">
                             <h4>Email Invite</h4>
                             <ul>
                                 
