--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -1,29 +1,130 @@
 {% extends "layout.html" %}
 {% block main %}
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 col-md-12">
-                <div class="well lead-well">
-  <h3>
-  Welcome to the Landing Page.
-  </h3>
-  <a href='/user/sign-in'>Log In or Create an Account</a> or:
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <div class="well lead-well">
 
-  <h4> Where am I, what is this about? </h4>
-  <ul>
-      <li>The TrueNTH initiative</li>
-      <li>The TrueNTH website</li> 
-      <li>What can I do?</li>
-          learn about support and guidance for men with prostate cancer and
-          those who care about them.  You can:
-          <ul>
-              <li><a href='/user/sign-in'>register now</a>, or later in this session, to save your information for a future visit</li>
-              <li><a href='/home'>use this site anonymously</a> <a href='/terms-of-use'>(anonymous terms of use, privacy policy)</a></li>
-              <li><a href='/home'>tell us about yourself so we guide you to the right place during this session</a></li>
-          </ul>
-  </ul>
+                <h3>TrueNTH</h3>
+                <ul>
+                    <li style="margin-bottom: 0.25em; font-size: 15px">is a revolutionary new program, funded by the Movember Foundation, that will significantly <strong>improve the physical and mental health of men</strong> diagnosed and living with prostate cancer.</li>
+                    <li style="margin-bottom: 0.25em; font-size: 15px">helps men and their families <strong>get their lives back on track</strong> following diagnosis and treatment.</li>
+                    <li style="font-size: 15px">helps you <strong>feel knowledgeable and confident</strong> on your journey.</li>
+                </ul>
+
+                <hr />
+                <div id="chooseSignIn">
+
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h4>Already have an account?</h4>
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <a href='/user/sign-in'
+                                       class="btn btn-block btn-default">
+                                        Sign In
+                                    </a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-xs-6">
+                            <h4>New to TrueNTH?</h4>
+                            <div class="row">
+                                <div class="col-sm-8">
+                                    <div id="getStarted"
+                                       class="btn btn-block btn-tnth-primary">
+                                        Get Started
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br /><br />
                 </div>
+
+                <div id="choosePath" style="display: none">
+                    <h4>Welcome to TrueNTH</h4>
+                    <p>Thanks for being a part of the TrueNTH community!</p>
+
+                    <h4 style="margin-top: 1em">What can I do?</h4>
+                    <p>Learn about support and guidance for men with prostate cancer and those who care about them. You can get started by...</p>
+
+                    <a href='/user/sign-in'
+                       class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
+                        Create an Account Now<br />
+                        <small>Register for TrueNTH so you can save information for future visits.</small>
+                    </a>
+                    <br />
+                    <a id="btnBrowse"
+                       class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
+                        Tell Us About Yourself<br />
+                        <small>Start by telling us about yourself so we can guide you to the right place.</small>
+                    </a>
+                    <br />
+                    <a id="btnAnon"
+                       class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
+                        Explore on Your Own<br />
+                        <small>Use this site without telling us about yourself. You'll see general information about prostate cancer.</small>
+                    </a>
+                    <br /><br />
+                    <p><strong>Our Privacy Policy</strong><br />
+                    Unless you choose to register as a user during this session, we will not keep any personal information about your visit.  We will record that an anonymous user explored the TrueNTH website, and note the time and activities of your visit. <a href='/terms-of-use'>See our privacy policy here</a>.
+                    </p>
+                    <br />
+
+                </div>
+
+                <div id="chooseBrowse" style="display: none">
+                    <h4>Tell Us About Yourself</h4>
+                    <p>Tell us a bit about your experience with prostate cancer so we can personalize your experience.</p>
+
+                    <p><strong>Have you had a prostate cancer biopsy?</strong></p>
+
+                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
+
+                    <br /><br />
+                    <p><strong>Have you been diagnosed with prostate cancer?</strong></p>
+
+                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
+
+                    <br /><br />
+                    <p><strong>Have you begun prostate cancer treatment?</strong></p>
+
+                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
+
+
+                </div>
+
+                <div id="chooseAnon" style="display: none">
+                    <h4>Explore on Your Own</h4>
+                    <p>You've chosen to browse through TrueNTH without telling us about yourself. You can access all of its content, but we won't be able to personalize it for you.</p>
+
+                    <div data-question="1">
+                        <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
+
+                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
+                    </div>
+
+                    <div data-question="2" style="display: none">
+                        <br />
+                        <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
+
+                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
+                    </div>
+
+                    <div data-question="3" style="display: none">
+                        <br />
+                        <p><strong>Would you like to view some other web information on Prostate Cancer?</strong></p>
+
+                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
+                    </div>
+
+                </div>
+
+
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
