--- a/portal/static/css/main.css
+++ b/portal/static/css/main.css
@@ -53,9 +53,9 @@ a:hover, a:active {
     margin-top: 2em;
 }
 .or-divider {
-    margin-bottom: 0.5em;
+    margin: 0.75em 0;
     padding: 0.5em;
-    background-color: #aaa;
+    background-color: #bbb;
     color: #fff;
     border-radius: 4px;
     display: inline-block;
