--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -5,66 +5,52 @@
         <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
             <div class="well lead-well">
 
+                <div class="pull-right">
+                    <p><strong>Already have an account?</strong></p>
+                    <a href='/user/sign-in'
+                       class="btn btn-block btn-default">
+                        Sign In
+                    </a>
+                </div>
+
                 <h3>TrueNTH</h3>
+                <!--
                 <ul>
                     <li style="margin-bottom: 0.25em; font-size: 15px">is a revolutionary new program, funded by the Movember Foundation, that will significantly <strong>improve the physical and mental health of men</strong> diagnosed and living with prostate cancer.</li>
                     <li style="margin-bottom: 0.25em; font-size: 15px">helps men and their families <strong>get their lives back on track</strong> following diagnosis and treatment.</li>
                     <li style="font-size: 15px">helps you <strong>feel knowledgeable and confident</strong> on your journey.</li>
                 </ul>
-
+                -->
+                <ul>
+                    <li style="margin-bottom: 0.25em; font-size: 15px">About the TrueNTH initiative...</li>
+                    <li style="font-size: 15px">About the TrueNTH website</li>
+                </ul>
                 <hr />
                 <div id="chooseSignIn">
 
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <h4>Already have an account?</h4>
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <a href='/user/sign-in'
-                                       class="btn btn-block btn-default">
-                                        Sign In
-                                    </a>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-xs-6">
-                            <h4>New to TrueNTH?</h4>
-                            <div class="row">
-                                <div class="col-sm-8">
-                                    <div id="getStarted"
-                                       class="btn btn-block btn-tnth-primary">
-                                        Get Started
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <br /><br />
-                </div>
-
-                <div id="choosePath" style="display: none">
-                    <h4>Welcome to TrueNTH</h4>
-                    <p>Thanks for being a part of the TrueNTH community!</p>
-
                     <h4 style="margin-top: 1em">What can I do?</h4>
-                    <p>Learn about support and guidance for men with prostate cancer and those who care about them. You can get started by...</p>
+                    <p>Learn about support and guidance for men with prostate cancer and those who care about them.</p>
+                    <p>You can get started by...</p>
 
                     <a href='/user/sign-in'
                        class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
-                        Create an Account Now<br />
-                        <small>Register for TrueNTH so you can save information for future visits.</small>
+                        Register for TrueNTH<br />
+                        <small>You can save your information for future visits.</small>
                     </a>
-                    <br />
-                    <a id="btnBrowse"
+                    <div class="text-center">
+                        <div class="or-holder"><div class="or-divider">or</div></div>
+                    </div>
+                    <a id="btnBrowse" href='/questions'
                        class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
-                        Tell Us About Yourself<br />
-                        <small>Start by telling us about yourself so we can guide you to the right place.</small>
+                        Tell Us About Your Situation Without Registering<br />
+                        <small>So we can guide you to the best information.</small>
                     </a>
-                    <br />
+                    <div class="text-center">
+                        <div class="or-holder"><div class="or-divider">or</div></div>
+                    </div>
                     <a id="btnAnon"
                        class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
-                        Explore on Your Own<br />
+                        Explore On Your Own Without Registering<br />
                         <small>Use this site without telling us about yourself. You'll see general information about prostate cancer.</small>
                     </a>
                     <br /><br />
