--- a/portal/templates/layout.html
+++ b/portal/templates/layout.html
@@ -47,7 +47,7 @@
 
 {% block main %}
 {% endblock %}
-s<script>
+<script>
 PORTAL_NAV_PAGE = window.location.protocol+"//"+window.location.host+"/api/portal-wrapper-html/";
 PORTAL_HOSTNAME = new URL(PORTAL_NAV_PAGE).hostname;
 
