New anon questions page.

--- a/portal/templates/questions_anon.html
+++ b/portal/templates/questions_anon.html
@@ -8,25 +8,29 @@
                 <h3>TrueNTH</h3>
 
                 <hr />
-                <h4>Tell Us About Yourself</h4>
-                <p>Tell us a bit about your experience with prostate cancer so we can personalize your experience.</p>
+                <h4>Explore on Your Own</h4>
+                <p>You've chosen to browse through TrueNTH without telling us about yourself. You can access all of its content, but we won't be able to personalize it for you.</p>
                 <br />
 
                 <div id="patientQuestions">
-                    <p><strong>Have you had a prostate cancer biopsy?</strong></p>
+
+                    <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
                     <div class="btn btn-default" name="biopsy" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="biopsy" data-value="false">No</div>
 
                     <br /><br />
-                    <p><strong>Have you been diagnosed with prostate cancer?</strong></p>
+                    <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
                     <div class="btn btn-default" name="pca_diag" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="pca_diag" data-value="false">No</div>
 
                     <br /><br />
-                    <p><strong>Have you begun prostate cancer treatment?</strong></p>
+                    <p><strong>Would you like to view some other web information on prostate cancer?</strong></p>
                     <div class="btn btn-default" name="tx" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="tx" data-value="false">No</div>
+
+
                 </div>
 
-                <br /><br /><br />
-                <div class="btn btn-tnth-primary">Continue <i class="fa fa-chevron-right"></i></div>
+                <br /><br />
+                <p>We're working hard to provide helpful information to men with prostate cancer. What would you like to know about that's not on the TrueNTH website?</p>
+
 
             </div>
         </div>
