Better layout for anon questions page. Small changes layout changes.

--- a/portal/templates/landing.html
+++ b/portal/templates/landing.html
@@ -40,7 +40,7 @@
                     <div class="text-center">
                         <div class="or-holder"><div class="or-divider">or</div></div>
                     </div>
-                    <a id="btnBrowse" href='/questions'
+                    <a href='/questions'
                        class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
                         Tell Us About Your Situation Without Registering<br />
                         <small>So we can guide you to the best information.</small>
@@ -48,7 +48,7 @@
                     <div class="text-center">
                         <div class="or-holder"><div class="or-divider">or</div></div>
                     </div>
-                    <a id="btnAnon"
+                    <a href='/questions_anon'
                        class="btn btn-block btn-tnth-primary btn-lg" style="white-space: normal">
                         Explore On Your Own Without Registering<br />
                         <small>Use this site without telling us about yourself. You'll see general information about prostate cancer.</small>
@@ -60,54 +60,6 @@
                     <br />
 
                 </div>
-
-                <div id="chooseBrowse" style="display: none">
-                    <h4>Tell Us About Yourself</h4>
-                    <p>Tell us a bit about your experience with prostate cancer so we can personalize your experience.</p>
-
-                    <p><strong>Have you had a prostate cancer biopsy?</strong></p>
-
-                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
-
-                    <br /><br />
-                    <p><strong>Have you been diagnosed with prostate cancer?</strong></p>
-
-                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
-
-                    <br /><br />
-                    <p><strong>Have you begun prostate cancer treatment?</strong></p>
-
-                    <a class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default">No</span>
-
-
-                </div>
-
-                <div id="chooseAnon" style="display: none">
-                    <h4>Explore on Your Own</h4>
-                    <p>You've chosen to browse through TrueNTH without telling us about yourself. You can access all of its content, but we won't be able to personalize it for you.</p>
-
-                    <div data-question="1">
-                        <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
-
-                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
-                    </div>
-
-                    <div data-question="2" style="display: none">
-                        <br />
-                        <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
-
-                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
-                    </div>
-
-                    <div data-question="3" style="display: none">
-                        <br />
-                        <p><strong>Would you like to view some other web information on Prostate Cancer?</strong></p>
-
-                        <a href="/home" class="btn btn-default">Yes</a> &nbsp;&nbsp;&nbsp; <span class="btn btn-default" data-ans="no">No</span>
-                    </div>
-
-                </div>
-
 
             </div>
         </div>
