--- a/portal/templates/questions.html
+++ b/portal/templates/questions.html
@@ -2,7 +2,7 @@
 {% block main %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
             <div class="well lead-well">
 
                 <h3>TrueNTH</h3>
