--- a/portal/templates/questions_anon.html
+++ b/portal/templates/questions_anon.html
@@ -2,34 +2,94 @@
 {% block main %}
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-sm-10 col-sm-offset-1">
             <div class="well lead-well">
 
                 <h3>TrueNTH</h3>
 
                 <hr />
                 <h4>Explore on Your Own</h4>
-                <p>You've chosen to browse through TrueNTH without telling us about yourself. You can access all of its content, but we won't be able to personalize it for you.</p>
+                <p>You can access all TrueNTH content, but we won't be able to personalize it for you.</p>
                 <br />
 
-                <div id="patientQuestions">
+                <div class="row">
+                    <div class="col-xs-6">
 
-                    <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
-                    <div class="btn btn-default" name="biopsy" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="biopsy" data-value="false">No</div>
+                        <h4>What Are You Looking For?</h4>
 
-                    <br /><br />
-                    <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
-                    <div class="btn btn-default" name="pca_diag" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="pca_diag" data-value="false">No</div>
-
-                    <br /><br />
-                    <p><strong>Would you like to view some other web information on prostate cancer?</strong></p>
-                    <div class="btn btn-default" name="tx" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default" name="tx" data-value="false">No</div>
-
-
+                    </div>
+                    <div class="col-xs-6">
+                        <h4>Browse TrueNTH Content</h4>
+                    </div>
                 </div>
 
-                <br /><br />
-                <p>We're working hard to provide helpful information to men with prostate cancer. What would you like to know about that's not on the TrueNTH website?</p>
+                <div class="row">
+                    <div class="col-xs-6">
+
+                        <p><strong>Would you like to explore treatment decision-making for early stage prostate cancer?</strong></p>
+                        <div>
+                            <div class="btn btn-default pat-q" name="decision" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="decision" data-value="false">No</div><br />
+                            <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Decision Support</strong>.</p>
+                        </div>
+                        <br />
+
+                    </div>
+                    <div class="col-xs-6">
+                        <a id="decision" href='/home'
+                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                            Decision Support<br />
+                            <small>Which option is best for me?</small>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6">
+
+                        <p><strong>Have you been treated for prostate cancer and would you like to learn about taking care of side effects and symptoms at home?</strong></p>
+                        <div>
+                            <div class="btn btn-default pat-q" name="management" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="management" data-value="false">No</div><br />
+                            <p style="display: none; margin-top: 1em;  font-style: italic">Great, we suggest viewing <strong>Self Management</strong>.</p>
+                        </div>
+                        <br />
+
+                    </div>
+                    <div class="col-xs-6">
+                        <a id="management" href='/home'
+                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                            Self Management<br />
+                            <small>How do I cope with symptoms?</small>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6">
+
+                        <p><strong>Would you like to view some other web information on prostate cancer?</strong></p>
+                        <div>
+                            <div class="btn btn-default pat-q" name="links" data-value="true">Yes</div> &nbsp;&nbsp;&nbsp; <div class="btn btn-default pat-q" name="links" data-value="false">No</div><br />
+                            <p style="display: none; margin-top: 1em; font-style: italic">Great, we suggest viewing <strong>Web Resources</strong>.</p>
+                        </div>
+                        <br />
+
+                    </div>
+                    <div class="col-xs-6">
+                        <a id="links" href='/home'
+                           class="btn btn-block btn-default btn-lg" style="white-space: normal">
+                            Web Resources<br />
+                            <small>Helpful links about prostate cancer</small>
+                        </a>
+                    </div>
+                </div>
+
+                <div id="tellUsMore" style="display: none">
+                    <br /><br />
+                    <h4>Tell Us What Else You'd Like to See</h4>
+                    <p>We're working hard to provide helpful information to men with prostate cancer. What would you like to know about that's not on the TrueNTH website?</p>
+                    <textarea id="tellUsText" class="form-control" rows="3"></textarea>
+                    <div style="margin-top: 1em" id="tellUsSave" class="btn btn-default">Save</div>
+                </div>
 
 
             </div>
@@ -39,21 +99,43 @@
 <script>
 $(document).ready(function(){
 
-    $("#patientQuestions .btn").on("click", function(){
-        var toCall = $(this).attr("name");
+    var noCount = 0;
+
+    $(".pat-q").on("click", function(){
+        var thisDiv = $(this);
+        // If the link is already active, then don't need to run this
+        if (thisDiv.hasClass("active")) {
+            return false;
+        }
+        var toCall = thisDiv.attr("name");
         // Get value from div - either true or false
-        var theVal = $(this).attr("data-value");
+        var theVal = thisDiv.data("value");
         $.ajax ({
             type: "POST",
             url: '/api/'+toCall+'/', // add user id here when we have that
             contentType: "application/json; charset=utf-8",
             dataType: 'json',
             data: theVal // Do we need to wrap in object?
+        }).always(function(){
+            thisDiv.parent().find(".pat-q").removeClass("active");
+            thisDiv.addClass("active");
+            if (theVal === true) {
+                thisDiv.parent().find("p").fadeIn();
+                $("#"+toCall).addClass("btn-tnth-primary");
+                noCount--;
+            } else {
+                thisDiv.parent().find("p").hide();
+                $("#"+toCall).removeClass("btn-tnth-primary");
+                noCount++;
+            }
+            if (noCount > 2) {
+                $("#tellUsMore").fadeIn();
+            }
         }).done(function() {
-            // Can reveal additional questions here if we display one at a time
+
         }).fail(function() {
-            alert("There was a problem updating your profile. Please try again.");
-        });
+            //alert("There was a problem updating your profile. Please try again.");
+        })
     });
     /** Send the AJAX **/
 
