--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -23,7 +23,7 @@
                     <h3>Care Plan</h3>
                     <div class="int-sub">How do I move forward after treatment?</div>
                     <p>You’ve been treated for prostate cancer, so what’s next? Develop a customized survivorship plan, to help remind you of your health needs as you move back to the care of your regular doctor.</p>
-                    <p><button  data-toggle="popover" title="Not Yet Available" data-content="This intervention is not available in the demo." class="btn btn-tnth-primary demo-disabled">Care Plan  <i class="fa fa-chevron-right"></i></button></p>
+                    <a href="{{ config['CARE_PLAN_INTERVENTION'] }}" class="btn btn-primary btn-tnth-primary">Care Plan <i class="fa fa-chevron-right"></i></a>
                 </div>
             </div>
 
